// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Backdrop /> component expects rendered element to match snapshot 1`] = `
.emotion-0 {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: rgba(19,19,19,0.85);
  z-index: 9;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="backdrop"
    type="dark"
  >
    <div>
      Example text
    </div>
  </div>
</div>
`;

exports[`<Backdrop /> component expects rendered element with type "light" to match snapshot 1`] = `
.emotion-0 {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: rgba(19,19,19,0.2);
  z-index: 9;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="backdrop"
    type="light"
  >
    <div>
      Example text
    </div>
  </div>
</div>
`;
